--- a/day4/index.html
+++ b/day4/index.html
@@ -12,13 +12,14 @@
     <p>Please fill out this form with the required information</p>
     <form method="post" action='https://register-demo.freecodecamp.org'>
         <fieldset>
-            <label id="first-name" for="first-name">Enter Your First Name: </label>
-            <label id="last-name" for="last-name">Enter Your Last Name: </label>
-            <label id="email" for="email">Enter Your Email: </label>
-            <label id="new-password" for="new-password">Create a New Password: </label>
+            <label for="first-name">Enter Your First Name: <input id="first-name" type="text" /></label>
+            <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" /></label>
+            <label for="email">Enter Your Email: <input id="email" type="email" /></label>
+            <label for="new-password">Create a New Password: <input id="new-password" type="password" /></label>
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
+        <input type="submit" value="Submit" />
     </form>
 </body>
 
